# cmd/main.go
@@ -14,19 +14,31 @@ import (
 	docs "github.com/sampathreddy22/task-management-api/cmd/docs"
 	"github.com/sampathreddy22/task-management-api/internal/config"
 	"github.com/sampathreddy22/task-management-api/internal/handlers"
+	"github.com/sampathreddy22/task-management-api/internal/middleware"
 	"github.com/sampathreddy22/task-management-api/internal/repositories"
 	"github.com/sampathreddy22/task-management-api/internal/services"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
+	"go.uber.org/zap"
 	"gorm.io/gorm"
 )
 
 func setupRouter(db *gorm.DB) *gin.Engine {
 
-	router := gin.Default()
+	// Initialize logger
+	logger, err := zap.NewDevelopment()
+	if err != nil {
+		log.Fatalf("Failed to initialize logger: %v", err)
+	}
+	defer logger.Sync()
+
+	// Add logging middleware
+	router := gin.New()
+	router.Use(middleware.ZapLogger(logger))
+
+	gin.SetMode(gin.ReleaseMode)
 	docs.SwaggerInfo.BasePath = "/api/v1"
 	api := router.Group("/api/v1")
-
 	//Initialize repositories and services
 	taskRepo := repositories.NewTaskRepository(db)
 	taskService := services.NewTaskService(taskRepo)
@@ -39,6 +51,10 @@ func setupRouter(db *gorm.DB) *gin.Engine {
 	attachmentRepo := repositories.NewAttachmentRepository(db)
 	attachmentService := services.NewAttachmentService(attachmentRepo)
 	attachmentHandler := handlers.NewAttachmentHandler(attachmentService)
+
+	commentRepo := repositories.NewCommentRepository(db)
+	commentService := services.NewCommentService(commentRepo)
+	commentHandler := handlers.NewCommentHandler(commentService)
 
 	//Setup routes
 	tasks := api.Group("/tasks")
@@ -58,11 +74,17 @@ func setupRouter(db *gorm.DB) *gin.Engine {
 
 	attachments := api.Group("/attachments")
 	{
-		attachments.POST("/", attachmentHandler.CreateAttachment)
+		attachments.POST("/", attachmentHandler.AddAttachment)
 		attachments.GET("/:id", attachmentHandler.GetAttachment)
 		attachments.GET("/task/:taskId", attachmentHandler.GetTaskAttachments)
 		attachments.PUT("/:id", attachmentHandler.UpdateAttachment)
 		attachments.DELETE("/:id", attachmentHandler.DeleteAttachment)
+	}
+
+	comments := api.Group("/comments")
+	{
+		comments.POST("/", commentHandler.AddComment)
+		comments.GET("/:taskID", commentHandler.GetCommentsByTaskID)
 	}
 
 	//Add swagger documentation
